# mistral-rouille

./: .gitignore  Cargo.toml  README.md  build.sh
generated-client/: .openapi-generator-ignore  Cargo.toml
generated-client/.openapi-generator/: FILES
generated-client/docs/: ChatChoices.md  ChatCompletionChoices.md  ChatCompletionColonColonChatCompletionRequest.md  ChatCompletionColonColonCreateRequest.md  ChatCompletionFnTools.md  ChatCompletionJsonModeChoices.md  ChatCompletionJsonModeUsage.md  ChatCompletionMessage.md  ChatCompletionRequest.md  ChatCompletionRequestFunctionCall.md  ChatCompletionRequestFunctionCallMessages.md  ChatCompletionRequestFunctionCallMessagesInner.md  ChatCompletionRequestFunctionCallToolsInner.md  ChatCompletionRequestFunctionCallToolsInnerFunction.md  ChatCompletionRequestJsonMode.md  ChatCompletionRequestJsonModeMessagesInner.md  ChatCompletionRequestJsonModeResponseFormat.md  ChatCompletionRequestMessages.md  ChatCompletionRequestMessagesInner.md  ChatCompletionResonseUsage.md  ChatCompletionResponse.md  ChatCompletionResponse200.md  ChatCompletionResponseChoicesInner.md  ChatCompletionResponseChoicesInnerMessage.md  ChatCompletionResponseFnChoicesMessageTool.md  ChatCompletionResponseFunctionCall.md  ChatCompletionResponseFunctionCallChoicesInner.md  ChatCompletionResponseFunctionCallChoicesInnerMessage.md  ChatCompletionResponseFunctionCallChoicesInnerMessageToolCallsInner.md  ChatCompletionResponseFunctionCallChoicesInnerMessageToolCallsInnerFunction.md  ChatCompletionResponseFunctionCallUsage.md  ChatCompletionResponseJsonMode.md  ChatCompletionResponseJsonModeUsage.md  (+75 more)
(+74 files in other folders)
